solve swiper slider issue on mobile and desktop click to slide

--- a/src/Components/OurServices/OurServices.css
+++ b/src/Components/OurServices/OurServices.css
@@ -4,7 +4,7 @@
     align-items: center;
     justify-self: center;
     width: 100%;
-    padding: 85px;
+    padding: 50px;
     gap: 55px;
 }
 
