--- a/src/Components/marquee/style.css
+++ b/src/Components/marquee/style.css
@@ -6,7 +6,7 @@
 } */
 
 .marquee1{
-    height: 650px;
+    height: 410px;
     flex: none;
     overflow: hidden;
     position: relative;
@@ -15,13 +15,25 @@
     text-align: center;
 }
 
-.slider_marquee{
+/* .slider_marquee{
     transform: perspective(1200px) rotate(-5deg) rotateX(5deg) rotateY(40deg);
     opacity: 1;
     position: absolute;
-    /* height: 372px; */
     right: -300px;
     top: calc(49.86595174262737% - 372px / 2);
+    width: 100%;
+    display: flex;
+    gap: 20px;
+    mask-image: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, rgb(0, 0, 0) 12.5%, rgb(0, 0, 0) 87.5%, rgba(0, 0, 0, 0) 100%);
+} */
+
+.slider_marquee {
+    transform: perspective(1142px) rotate(-6deg) rotateX(10deg) rotateY(40deg);
+    opacity: 1;
+    position: absolute;
+    /* height: 372px; */
+    right: -140px;
+    top: calc(80.865952% - 370px / 2);
     width: 100%;
     /* background-color: blue; */
     display: flex;
